--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Project Starter</title>
+    <title>Evan's Travel Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
-    <meta name="description" content="TODO: A starter project for ..." />
+    <meta name="description" content="Main Screen" />
 
     <link rel="stylesheet" href="./stylesheets/main.css" />
   </head>
@@ -21,15 +21,23 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Locations</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
-              </li>
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="yellowstone.html">Yellowstone</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="teton.html">Teton</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="yosemite.html">Yosemite</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="comment.html">Comment Forum</a>
+                </li>
+              </ul>
             </ul>
           </div>
         </div>
@@ -51,7 +59,7 @@
               <div class="carousel-caption text-start">
                 <h1>Yellowstone</h1>
                 <p>A thermal hotspot. See the beauty of natural hot springs and geysers.</p>
-                <p><a class="btn btn-lg btn-warning" href="#">See more</a></p>
+                <p><a class="btn btn-lg btn-warning" href="yellowstone.html">See more</a></p>
               </div>
             </div>
           </div>
@@ -63,7 +71,7 @@
               <div class="carousel-caption">
                 <h1>Grand Teton</h1>
                 <p>Explore a major mountain range next to Jackson Hole WY.</p>
-                <p><a class="btn btn-lg btn-warning" href="#">See more</a></p>
+                <p><a class="btn btn-lg btn-warning" href="teton.html">See more</a></p>
               </div>
             </div>
           </div>
@@ -75,7 +83,7 @@
               <div class="carousel-caption text-end">
                 <h1>Yosemite</h1>
                 <p>See the major cliffs in this amazing National Park in California.</p>
-                <p><a class="btn btn-lg btn-warning" href="#">See more</a></p>
+                <p><a class="btn btn-lg btn-warning" href="yosemite.html">See more</a></p>
               </div>
             </div>
           </div>
