--- a/src/comment.html
+++ b/src/comment.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Project Starter</title>
+    <title>Comment Forum</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
-    <meta name="description" content="TODO: A starter project for ..." />
+    <meta name="description" content="Comment Forum" />
 
     <link rel="stylesheet" href="./stylesheets/main.css" />
   </head>
@@ -43,6 +43,8 @@
         </div>
       </nav>
     </div>
+
+    <h1 class="comments-heading">The Comment Forum</h1>
     <div class="container my-3">
       <form>
         <div class="mb-3">
