--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
       <div class="content">
         <div class="row align-items-md-stretch">
           <div class="col-md-6">
-            <div class="h-100 p-5 text-white bg-dark rounded-3">
+            <div class="h-100 p-5 text-white bg-black rounded-3">
               <h2>Browse the Collection</h2>
               <p>There are several beautiful places that are around us. This website highlights some of the various places I have gone to, expressing each's beauty through photos. Take the journey to one of the locations above.</p>
             </div>
