--- a/src/teton.html
+++ b/src/teton.html
@@ -54,7 +54,7 @@
           <div class="col-md-6">
             <div class="h-100 p-5 text-white bg-black rounded-3">
               <h2>About</h2>
-              <p>Grand Teton National Park is a must see. The geography of the park is very interesting, due to the mountain range protruding from a relatively flat valley, highlighting the intensity of this mountain range. Grand Teton has a lot to offer in terms of what there is to see, even if you are just driving through to see the other national parks in the area.</p>
+              <p>Grand Teton National Park is a must see. The geography of the park is very interesting, due to the mountain range protruding from a relatively flat valley, it highlights the intensity of this mountain range. Grand Teton has a lot to offer in terms of what there is to see, even if you are just driving through to see the other national parks in the area.</p>
             </div>
           </div>
           <div class="col-md-6">
